--- a/.classpath
+++ b/.classpath
@@ -28,7 +28,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -44,5 +43,9 @@
 	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/commons-codec-1.16.1-bin/commons-codec-1.16.1/commons-codec-1.16.1-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/commons-codec-1.16.1-bin/commons-codec-1.16.1/commons-codec-1.16.1-tests.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/commons-codec-1.16.1-bin/commons-codec-1.16.1/commons-codec-1.16.1-test-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/byte-buddy-agent-1.11.13-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/byte-buddy-agent-1.11.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/byte-buddy-agent-1.11.13-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
