--- a/.classpath
+++ b/.classpath
@@ -47,5 +47,16 @@
 	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/byte-buddy-agent-1.11.13-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/byte-buddy-agent-1.11.13.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Divya/Downloads/byte-buddy-agent-1.11.13-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Divya/.m2/repository/org/mockito/mockito-core/3.12.4/mockito-core-3.12.4.jar" sourcepath="C:/Users/Divya/.m2/repository/org/mockito/mockito-core/3.12.4/mockito-core-3.12.4-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+			<attribute name="maven.groupId" value="org.mockito"/>
+			<attribute name="maven.artifactId" value="mockito-core"/>
+			<attribute name="maven.version" value="3.12.4"/>
+			<attribute name="maven.scope" value="test"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
